<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/icon" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_extraLarge"
        android:textStyle="bold"
        android:lines="2"
        android:singleLine="false"
        android:layout_marginTop="130dp"
        android:layout_toRightOf="@+id/icon"
        android:layout_toEndOf ="@+id/icon"
        />

    <TextView
        android:id="@+id/type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_name"
        android:layout_below="@id/title"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/hint"
        android:layout_below="@+id/type_name"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:background="@drawable/second_button"
        android:onClick="sendMessage"
        />


</RelativeLayout>