<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">






    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"

        />

    <TextView
        android:id="@+id/typed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        android:layout_toRightOf="@+id/welcome"
        android:layout_toEndOf="@+id/welcome"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="7dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/choose_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_quiz"
        android:gravity="center"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"

        />

    <Button
        android:id="@+id/geography_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/choose_quiz"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="85dp"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="50dp"
        android:text="@string/geography_quiz"
        android:background="@drawable/first_button"
        />

    <Button
        android:id="@+id/history_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/geography_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="85dp"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/history_quiz"
        android:background="@drawable/second_button"
        />

    <Button
        android:id="@+id/math_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/history_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="85dp"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/math_quiz"
        android:background="@drawable/third_button"
        />

</RelativeLayout>